syntax = "proto3";

option go_package = "proto;entities";

service Entities {
  rpc CreateEntity(EntitiesRequest) returns (EntitiesResponse) {}
}

message EntitiesRequest {
  string title = 1;
}

message EntitiesResponse {
  string msg = 2;
}
