syntax = "proto3";

option go_package = "proto;projects";

service Projects {
  rpc CreateProject(ProjectsRequest) returns (ProjectsResponse) {}
}

message ProjectsRequest {
  string title = 1;
}

message ProjectsResponse {
  string msg = 2;
}
